deploy/load-balancer.yml
kind: Service
apiVersion: v1
metadata:
  name: slim-api-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
spec:
  type: LoadBalancer
  selector:
    app: slim-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 4000
