deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: slim-api-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: slim-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slim-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: slim-api
  template:
    metadata:
      labels:
        app: slim-api
    spec:
      imagePullSecrets:
          - name: regcred
      containers:
        - name: slim
          image: registry.gitlab.com/eliasjpr/slim:latest
          ports:
            - containerPort: 80
