deploy/slim_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: slim-ingress
spec:
  rules:
  - host: dev.revium.com
    http:
      paths:
      - backend:
          serviceName: slim-api-lb
          servicePort: 80
